--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 html {
-  font-size: 0.94rem;
+  font-size: 0.87rem;
 }
 .App {
   height: 100vh;
@@ -104,10 +104,12 @@ html {
 }
 /* App container styles */
 .app-container {
+  width: 100vw;
   display: flex;
   overflow-x: hidden;
   flex: 1 1 auto;
   height: 1px;
+  transition: 0.3s ease;
 }
 .custom-chip {
   padding-top: 5px !important;
@@ -133,11 +135,18 @@ html {
 .app-container-body {
   padding: 15px 30px;
   flex: 1;
+  width: calc(100vw - 200px);
+  height: 100%;
   display: flex;
   overflow-x: hidden;
   flex: 1 1 auto;
   flex-direction: column;
   position: relative;
+  transition: 0.3s ease;
+}
+
+.app-container-body.expanded {
+  width: 100vw;
 }
 
 .calendar-container{
@@ -157,11 +166,18 @@ html {
 
 /* sideNav Styles */
 .sideNav {
-  padding: 0px 0px 15px 0px;
+  /* padding: 0px 0px 15px 0px; */
+  width: 200px;
+  height: 100%;
   border-right: 1px solid lightgrey;
   font-size: 1.05rem;
+  transition: 0.3s ease;
+  position: relative;
+  overflow: hidden;
 }
-
+.sideNav.collapse {
+  width: 0;
+}
 .sideNav a.list-group-item {
   padding: 15px 30px;
 }
@@ -247,6 +263,7 @@ html {
 }
 .sectionClick {
   cursor: pointer;
+  margin-bottom: 0.5rem;
 }
 .courseContent {
   margin-bottom: 16px;
@@ -288,4 +305,22 @@ html {
 
 .course-file:active {
   background-color: #becfdb;
+}
+.quill{
+  border: 1px solid transparent !important;
+}
+.quill.is-invalid{
+  border: 1px solid #dc3545 !important;
+}
+.customDropDown .dropdown-menu.show{
+  box-shadow: 2px 4px 5px rgba(33, 33, 33, 0.25);
+  min-width: 400px;
+}
+.customDropDown .dropdown{
+  padding: 0;
+}
+.customDropDown .dropdown a{
+  display: inline-block;
+  padding: 0.4rem 0.8rem;
+  box-shadow: 1px 1px 5px rgba(33, 33, 33, 0.25)
 }
